add the catbus (master)

--- a/_layout.jade
+++ b/_layout.jade
@@ -8,6 +8,7 @@ head
 
   script(src="bower_components/jquery/dist/jquery.min.js")
   script(src="bower_components/bootstrap/dist/js/bootstrap.min.js")
+  script(src="app.js")
 
 body
   != yield
