--- a/index.jade
+++ b/index.jade
@@ -1,3 +1,4 @@
+//- Triforce
 section.triforce
   nav
     ul.nav.nav-pills.nav-stacked
@@ -30,3 +31,20 @@ section.triforce
   aside
     .well.
       Aside
+
+.navbar.navbar-default.navbar-static-top.wunderbar
+  .container-fluid
+    a.navbar-brand.pull-right Assumed Navbar
+
+//- catbus
+section.catbus.catbus-left
+  nav
+    button(js-catbus-button) Categories
+    .well.demo
+      | Catbus Nav
+
+  article
+    hgroup
+      h4 Catbus Title
+    .well.demo
+      | Catbus Body.  Search results go here.
