--- a/index.jade
+++ b/index.jade
@@ -29,17 +29,32 @@ section.triforce
   aside
     .well Aside
 
+//- wunderbar
 .navbar.navbar-default.navbar-static-top.wunderbar
   .container-fluid
-    a.navbar-brand.catbus__button.catbus-top(js-catbus-button).
-      Categories <sub><i class="glyphicon glyphicon-chevron-down carrot"></i></sub>
+    a.navbar-brand.catbus__button.catbus-left(js-catbus-button).
+      Catbus Button <small class="glyphicon glyphicon-chevron-down carrot"></small>
 
-    a.navbar-brand.pull-right Assumed Navbar
+    .pull-right
+      form#js-catbus-config.navbar-form.form-inline.pull-left
+        | Catbus Config: &nbsp;
+        .btn-group(data-toggle="buttons")
+          label.btn.btn-default.active
+            input(type="radio" name="catbus-config" checked value="left")
+            | Left
+          label.btn.btn-default
+            input(type="radio" name="catbus-config" value="top")
+            | Top
+          label.btn.btn-default
+            input(type="radio" name="catbus-config" value="right")
+            | Right
+
+      a.navbar-brand Assumed Navbar
 
 //- catbus
-section.catbus.catbus-top
+section.catbus.catbus-left
   nav
-    button(js-catbus-button) Categories
+    button(js-catbus-button) Catbus Button <small class="glyphicon glyphicon-chevron-down carrot"></small>
     .well.demo Catbus Nav
 
   article
