move the catbus controls into the body (master)

--- a/index.jade
+++ b/index.jade
@@ -36,19 +36,6 @@ section.triforce
       Catbus Button <small class="glyphicon glyphicon-chevron-down carrot"></small>
 
     .pull-right
-      form#js-catbus-config.navbar-form.form-inline.pull-left
-        | Catbus Config: &nbsp;
-        .btn-group(data-toggle="buttons")
-          label.btn.btn-default.active
-            input(type="radio" name="catbus-config" checked value="left")
-            | Left
-          label.btn.btn-default
-            input(type="radio" name="catbus-config" value="top")
-            | Top
-          label.btn.btn-default
-            input(type="radio" name="catbus-config" value="right")
-            | Right
-
       a.navbar-brand Assumed Navbar
 
 //- catbus
@@ -60,4 +47,20 @@ section.catbus.catbus-left
   article
     hgroup
       h4 Catbus Title
-    .well.demo Catbus Body.  Search results go here.
+    .well.demo
+      .pull-right
+        form#js-catbus-config.navbar-form.form-inline.pull-left
+          | Catbus Config: &nbsp;
+          .btn-group(data-toggle="buttons")
+            label.btn.btn-default.active
+              input(type="radio" name="catbus-config" checked value="left")
+              | Left
+            label.btn.btn-default
+              input(type="radio" name="catbus-config" value="top")
+              | Top
+            label.btn.btn-default
+              input(type="radio" name="catbus-config" value="right")
+              | Right
+
+
+      | Catbus Body.  Search results go here.
