--- a/index.jade
+++ b/index.jade
@@ -32,35 +32,36 @@ section.triforce
 //- wunderbar
 .navbar.navbar-default.navbar-static-top.wunderbar
   .container-fluid
-    a.navbar-brand.catbus__button.catbus-left(js-catbus-button).
+    a.navbar-brand.catbus__button.catbus--left(js-catbus-button).
       Catbus Button <small class="glyphicon glyphicon-chevron-down carrot"></small>
 
     .pull-right
       a.navbar-brand Assumed Navbar
 
 //- catbus
-section.catbus.catbus-left
-  nav
+section.catbus.catbus--left
+  nav.catbus__nav
     button(js-catbus-button) Catbus Button <small class="glyphicon glyphicon-chevron-down carrot"></small>
-    .well.demo Catbus Nav
+    .well Catbus Nav
 
-  article
-    hgroup
-      h4 Catbus Title
-    .well.demo
-      .pull-right
-        form#js-catbus-config.navbar-form.form-inline.pull-left
-          | Catbus Config: &nbsp;
-          .btn-group(data-toggle="buttons")
-            label.btn.btn-default.active
-              input(type="radio" name="catbus-config" checked value="left")
-              | Left
-            label.btn.btn-default
-              input(type="radio" name="catbus-config" value="top")
-              | Top
-            label.btn.btn-default
-              input(type="radio" name="catbus-config" value="right")
-              | Right
+  section.catbus__section
+    article.catbus__article
+      header
+        h4 Catbus Title
+      .well.demo
+        .pull-right
+          form#js-catbus-config.navbar-form.form-inline.pull-left
+            | Catbus Config: &nbsp;
+            .btn-group(data-toggle="buttons")
+              label.btn.btn-default.active
+                input(type="radio" name="catbus-config" checked value="left")
+                | Left
+              label.btn.btn-default
+                input(type="radio" name="catbus-config" value="top")
+                | Top
+              label.btn.btn-default
+                input(type="radio" name="catbus-config" value="right")
+                | Right
 
 
-      | Catbus Body.  Search results go here.
+        | Catbus Body.  Search results go here.
